--- a/.env
+++ b/.env
@@ -1,10 +1,10 @@
-#App variables
+a#App variables
 APP_HOST=8080
 
 
 #DB variables
 
-DB_URL=postgres://livsey:ewv52L@localhost:5432/ShopPractice
+DB_URL=postgres://livsey:example@localhost:5432/ShopPractice
 
 
 
